# visioncastAI

./: .editorconfig  .gitignore  1.24.0  1.3.0  10.0.0  25.0.0  4.8.0  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  vcpkg.json
.github/workflows/: ci.yml
config/: design.json  license.json  system.json  video_filters.json
docs/: ARCHITECTURE.md  DESIGN.md  DOCUMENTATION.md  INSTALLATION_GUIDE.md  README.md  SDK_INTEGRATION.md  USER_MANUAL.md  architecture_diagram.dot  generate_diagram.py
docs/mockups/: control-room.html
engine/: CMakeLists.txt  README.md
engine/include/visioncast/: capture_manager.h  ffmpeg_rtmp.h  filter_chain.h  gpu_compositor.h  metadata_receiver.h  multi_ffmpeg_rtmp_manager.h  output_manager.h  overlay_renderer.h  pipeline_manager.h  video_filters.h  vision_engine.h  zmq_endpoint.h  zmq_receiver.h
engine/src/: capture_manager.cpp  ffmpeg_rtmp.cpp  filter_chain.cpp  gpu_compositor.cpp  main.cpp  metadata_receiver.cpp  multi_ffmpeg_rtmp_manager.cpp  output_manager.cpp  overlay_renderer.cpp  pipeline_manager.cpp  video_filters.cpp  vision_engine.cpp  zmq_receiver.cpp
overlays/: README.md
overlays/templates/: default.json  minimal.json  modern_blue.json
packaging/: README.md
packaging/icons/: README.md  visioncast.rc
python/: __init__.py  main.py  pyproject.toml  requirements.txt
python/ai/: __init__.py  detection.py  encoding.py  face_detector.py  face_matcher.py  recognition.py  talent_db.py  talents_loader.py
python/ipc/: __init__.py  _config.py  metadata_sender.py  protocol.py  zmq_sender.py
python/tests/: conftest.py  test_broadcast_sdk.py  test_design_panel.py  test_detection.py  test_device_scanner.py  test_gpu_compositor.py  test_license_manager.py  test_main_robustness.py  test_modules.py  test_monitoring_panel.py  test_multi_rtmp.py  test_packaging.py  test_recognition_matching.py  test_recognition_panel.py  test_sdk_integration.py  test_talent_panel.py  test_video_filters.py  test_zmq_config.py
sdk/: CMakeLists.txt  README.md
sdk/include/visioncast_sdk/: aja_device.h  aja_input.h  aja_output.h  decklink_device.h  decklink_input.h  decklink_output.h  magewell_device.h  magewell_input.h  multi_rtmp_manager.h  ndi_device.h  ndi_input.h  ndi_output.h  rtmp_output.h  sdk_error.h  sdk_logger.h  srt_output.h  video_device.h  video_input_interface.h  video_output_interface.h
sdk/src/: aja_device.cpp  aja_input.cpp  aja_output.cpp  decklink_device.cpp  decklink_helpers.h  decklink_input.cpp  decklink_output.cpp  magewell_device.cpp  magewell_input.cpp  multi_rtmp_manager.cpp  ndi_device.cpp  ndi_helpers.h  ndi_input.cpp  ndi_output.cpp  rtmp_output.cpp  sdk_logger.cpp  srt_output.cpp  video_device.cpp
talents/: talents.json
ui/: CMakeLists.txt  README.md
ui/include/visioncast_ui/: design_panel.h  license_defaults.h  license_dialog.h  license_manager.h  main_window.h  monitoring_panel.h  output_config.h  overlay_editor.h  preview_panel.h  python_launcher.h  qml_bridge.h  recognition_panel.h  talent_manager.h
ui/qml/: Main.qml  qml.qrc
ui/qml/components/: VCButton.qml  VCCard.qml  VCMetricGauge.qml  VCOverlayPreview.qml  VCSearchField.qml  VCSectionHeader.qml  VCStatusIndicator.qml  VCTalentCard.qml  VCToggleSwitch.qml  VCVideoThumbnail.qml
ui/qml/panels/: DesignPanel.qml  MonitoringPanel.qml  MultiStreamPanel.qml  OutputPanel.qml  OverlayPanel.qml  PreviewView.qml  ProgramView.qml  RecognitionPanel.qml  SourcePanel.qml  TalentPanel.qml
ui/qml/theme/: VCColors.qml  VCTheme.qml  qmldir
ui/resources/: visioncast.qrc
ui/src/: design_panel.cpp  license_dialog.cpp  license_manager.cpp  main.cpp  main_qml.cpp  main_window.cpp  monitoring_panel.cpp  output_config.cpp  overlay_editor.cpp  preview_panel.cpp  python_launcher.cpp  qml_bridge.cpp  recognition_panel.cpp  talent_manager.cpp
ui/themes/: dark.qss  light.qss
