[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "visioncast-ai"
version         = "0.1.0"
description     = "AI face recognition and broadcast metadata IPC for VisionCast"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "Proprietary" }
keywords        = ["broadcast", "face-recognition", "ai", "video"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pyzmq>=25.0",
    "face-recognition>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
]

[project.scripts]
visioncast-ai = "main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "ipc*", "monitoring*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
